[gd_scene load_steps=3 format=3 uid="uid://d0b0vjw3757mh"]

[ext_resource type="Theme" uid="uid://bhules4vvoytk" path="res://Themes/GraphNodeTheme.tres" id="1_88irh"]
[ext_resource type="Script" path="res://Scenes/CreateStory/TextBox.gd" id="2_hfpqt"]

[node name="TextBox" type="GraphNode"]
custom_minimum_size = Vector2(300, 0)
offset_left = 363.0
offset_top = 143.0
offset_right = 539.0
offset_bottom = 198.0
mouse_filter = 1
theme = ExtResource("1_88irh")
title = "Text Box"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = true
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
script = ExtResource("2_hfpqt")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = " Name:"

[node name="DeleteButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "X"

[node name="NameMenu" type="MenuButton" parent="."]
layout_mode = 2
text = "Choose Character"
flat = false

[node name="Label2" type="Label" parent="."]
layout_mode = 2
text = " Dialog:"

[node name="DialogInput" type="TextEdit" parent="."]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[connection signal="pressed" from="HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
